--- a/package.json
+++ b/package.json
@@ -13,10 +13,16 @@
   "dependencies": {
     "axios": "^0.19.0",
     "body-parser": "^1.19.0",
+    "cors": "^2.8.5",
     "ejs": "^3.0.1",
     "express": "^4.17.1",
     "express-session": "^1.17.0",
     "firebase-admin": "^8.8.0",
+    "helmet": "^3.21.2",
+    "sequelize": "^5.21.3",
     "socket.io": "^2.3.0"
+  },
+  "devDependencies": {
+    "sequelize-cli": "^5.5.1"
   }
 }
