--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "start": "node index.js"
+    "start": "node index.js",
+    "dev": "nodemon index.js"
   },
   "keywords": [],
   "author": "",
@@ -18,8 +19,11 @@
     "express-session": "^1.17.0",
     "firebase-admin": "^8.8.0",
     "helmet": "^3.21.2",
+    "mysql": "^2.17.1",
+    "mysql2": "^2.1.0",
     "sequelize": "^5.21.3",
-    "socket.io": "^2.3.0"
+    "socket.io": "^2.3.0",
+    "uuid": "^3.3.3"
   },
   "devDependencies": {
     "sequelize-cli": "^5.5.1"
